--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio - Pawan Kumavat</title>
+    <title>Personal Portfolio - Fauzan Fuadi</title>
 
     <!-- bootstrap css cdn link  -->
     <link
@@ -92,14 +92,13 @@
         <!-- here data-aos is used for adding aos animation  -->
         <div class="col-10 col-md-6 text-center text-md-start" data-aos="slide-right">
           <h2 style="color: #3f396d">
-            Hello! I Am <br /><span class="c-orange">Pawan Kumavat</span>
+            Halo Semuanya! Perkenalkan nama aku <br /><span class="c-orange">Fauzan Fuadi</span>
           </h2>
           <p class="text-muted">
-            I'm A Web Developer having 5 years of experience in expertise of
-            creating website with fully responsive Also with backend part too.
+            Saya adalah seorang anak berusia 14 tahun yang bercita cita menjadi pengembang yang profesional, dengan pengalaman saya yang sudah 6 tahun dalam keahlian membuat aplikasi proyek dan situs web yang sepenuhnya responsif dan buatan saya sendiri.
           </p>
           <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
-            Hire Me
+            tentang saya
           </button>
           <a href="" class="link ms-4 d-none">See My Work</a>
         </div>
@@ -113,10 +112,10 @@
     <!-- expertise section starts -->
     <section class="expertise mt-5" id="service">
       <div class="heading text-center">
-        <small>My Expertise</small>
+        <small>Keahlian Saya</small>
         <h3>
-          Provide Wide Range of <br />
-          Digital Services
+          Menyediakan Berbagai <br />
+          Layanan Digital
         </h3>
       </div>
       <div class="row justify-content-evenly mt-5">
@@ -130,10 +129,10 @@
               />
             </div>
             <div class="content mt-3">
-              <h4>Web Design</h4>
+              <h4>Desain Web</h4>
               <p class="text-muted">
-                Dolor repellendus temporibus autem quibusdam officiis debitis
-                rerum neces aibus minima veniam.
+                Saya bisa mendesain website dengan CSS
+                Agar membuat UI/UX lebih bagus dan responsif.
               </p>
               <a href="" class="link">Read More</a>
             </div>
@@ -149,10 +148,9 @@
               />
             </div>
             <div class="content mt-3">
-              <h4>Web Development</h4>
+              <h4>Pengembangan Web</h4>
               <p class="text-muted">
-                Dolor repellendus temporibus autem quibusdam officiis debitis
-                rerum neces aibus minima veniam.
+                Saya mengembangkan website seperti portfolio, chat ai, store, dan masih banyak lagi.
               </p>
               <a href="" class="link">Read More</a>
             </div>
@@ -170,10 +168,9 @@
             <div class="content mt-3">
               <h4>Debugging</h4>
               <p class="text-muted">
-                Dolor repellendus temporibus autem quibusdam officiis debitis
-                rerum neces aibus minima veniam.
+                Saya juga terkadang belajar debugging sedikit demi sedikit.
               </p>
-              <a href="" class="link">Read More</a>
+              <a href="" class="link">Baca Selengkapnya</a>
             </div>
           </div>
         </div>
