--- a/index.html
+++ b/index.html
@@ -225,16 +225,13 @@
         </div>
         <div class="col-10 col-md-5 skill-detail" data-aos="slide-left">
           <div class="heading mt-5 mt-md-3">
-            <small>My Skills</small>
-            <h3>Beautiful & Unique Digital Experiences</h3>
+            <small>Keterampilan Saya</small>
+            <h3>Pengalaman Digital yang Indah & Unik</h3>
             <p class="text-muted">
-              Nostrum exercitationem ullam corporis suscipit laborioa nisi ut
-              aliquid exrea commodi consequatur magni dolores aos qui ratione
-              voluptatem nesciunt.
+              Saya memiliki skill dalam bidang pembuatan website serta aplikasi, walau saya masih tahap belajar.
             </p>
             <p class="text-muted">
-              Quia voluptas sit aspernatur aut odit aut fugit, sed ruiano
-              consequntar magni dolores.
+              Untuk selengkapnya tentang saya dan untuk menghubungi saya, silahkan klik tombol download PDF dibawah.
             </p>
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
@@ -242,7 +239,7 @@
                 href="Entry Level Web Developer Resume.pdf"
                 download="SampleCV"
                 style="text-decoration: none;color: #fff;"
-                >Download CV</a
+                >Download PDF</a
               >
             </button>
           </div>
@@ -254,8 +251,8 @@
     <!-- portfolio section starts here -->
     <section class="portfolio" id="portfolio">
       <div class="heading text-center pt-5">
-        <small>Creative Work</small>
-        <h3>Check My Portfolio</h3>
+        <small>Pekerjaan Kreatif</small>
+        <h3>Cek Portfolio Saya</h3>
       </div>
 
       <div id="myBtnContainer" class="text-center mt-4">
@@ -277,7 +274,7 @@
                 <span class="badge bg-secondary badge-pill">JavaScript</span>
                 <span class="badge bg-secondary badge-pill mb-2">Game</span
                 ><br />
-                <a href="#" class="link">Read More</a>
+                <a href="#" class="link">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -294,7 +291,7 @@
                 <span class="badge bg-secondary badge-pill">JavaScript</span>
                 <span class="badge bg-secondary badge-pill mb-2">Website</span
                 ><br />
-                <a href="#" class="read-more-btn link">Read More</a>
+                <a href="#" class="read-more-btn link">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -322,7 +319,7 @@
                 <span class="badge bg-secondary badge-pill">JavaScript</span>
                 <span class="badge bg-secondary badge-pill mb-2">App</span
                 ><br />
-                <a href="#" class="read-more-btn link">Read More</a>
+                <a href="#" class="read-more-btn link">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -335,7 +332,7 @@
                 <span class="badge bg-secondary badge-pill">JavaScript</span>
                 <span class="badge bg-secondary badge-pill mb-2">Game</span
                 ><br />
-                <a href="#" class="read-more-btn link">Read More</a>
+                <a href="#" class="read-more-btn link">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -352,7 +349,7 @@
                 <span class="badge bg-secondary badge-pill">JavaScript</span>
                 <span class="badge bg-secondary badge-pill mb-2">Web App</span
                 ><br />
-                <a href="#" class="read-more-btn link">Read More</a>
+                <a href="#" class="read-more-btn link">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -467,8 +464,8 @@
               alt="..."
             />
             <div class="card-body px-4">
-              <small>By Pawan Kumavat</small
-              ><span class="ms-3">Mar 8,2022</span>
+              <small>By Fauzan Fuadi</small
+              ><span class="ms-3">Feb 14,2025</span>
               <h4 class="card-title">
                 <a href="">Quis autem vea eum iure reprehenderit</a>
               </h4>
@@ -488,8 +485,8 @@
               alt="..."
             />
             <div class="card-body px-4">
-              <small>By Pawan Kumavat</small
-              ><span class="ms-3">Mar 8,2022</span>
+              <small>By Fauzan Fuadi</small
+              ><span class="ms-3">Feb 14,2025</span>
               <h4 class="card-title">
                 <a href="">Quis autem vea eum iure reprehenderit</a>
               </h4>
@@ -509,8 +506,8 @@
               alt="..."
             />
             <div class="card-body px-4">
-              <small>By Pawan Kumavat</small
-              ><span class="ms-3">Mar 8,2022</span>
+              <small>By Fauzan Fuadi</small></small
+              ><span class="ms-3">Feb 14,2025</span>
               <h4 class="card-title">
                 <a href="">Quis autem vea eum iure reprehenderit</a>
               </h4>
@@ -534,8 +531,8 @@
                   <img src="images/2048game.png" class="img-fluid" alt="">
                 </div>
                 <div class="content mt-3">
-                  <small>By Pawan Kumavat</small
-                    ><span class="text-muted ms-2">Mar 8,2022</span>
+                  <small>By Fauzan Fuadi</small
+                    ><span class="text-muted ms-2">Feb 14,2025</span>
                   <h4 class="card-title mt-3">Quis autem vea eum iure reprehenderit</h4>
                   <div class="social-links mt-4">
                       <button href="" class="rounded-pill dribble">
@@ -606,8 +603,8 @@
                   <img src="images/currency-converter.png" class="img-fluid" alt="">
                 </div>
                 <div class="content mt-3">
-                  <small>By Pawan Kumavat</small
-                    ><span class="text-muted ms-2 ms-md-0">Mar 8,2022</span>
+                  <small>By Fauzan Fuadi</small
+                    ><span class="text-muted ms-2 ms-md-0">Feb 14,2025</span>
                   <h4 class="card-title mt-3">Quis autem vea eum iure reprehenderit</h4>
                   <div class="social-links mt-4">
                       <button href="" class="rounded-pill dribble">
