--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
     <!-- blog section starts -->
     <section class="blog mt-5 pb-5" id="blog">
       <div class="heading text-center pt-5">
-        <small>Latest News</small>
-        <h3>Blog & Articles</h3>
+        <small>Berita Utama</small>
+        <h3>Blog & Artikel</h3>
       </div>
       <div class="row justify-content-evenly px-4 mt-4" data-aos="fade-up">
         <div class="blogpost col-md-4 col-10 mt-2 mt-md-0 game all">
@@ -545,11 +545,11 @@
                         <i class="bi bi-behance"></i>
                       </button>
                   </div>
-                  <p class="text-muted mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor eros a tellus auctor, nec suscipit nunc dignissim. Ut suscipit gravida augue sed elementum. Sed sed luctus nisl. Donec scelerisque nisi in sodales mattis. Vestibulum suscipit odio ac enim blandit sollicitudin. Aliquam ultrices sem quis urna placerat interdum. Etiam rutrum, quam sagittis tristique mollis, libero arcu scelerisque erat, eget tincidunt eros diam quis nunc.</p>
+                  <p class="text-muted mt-3">Terimakasih yang sudah membaca website artikel portfolio saya, jika ada sesuatu silahkan hubungi saya.</p>
                 </div>
               </div>
               <div class="heading px-2">
-                <h3 class="fs-3 ms-3">Leave A Comment</h3>
+                <h3 class="fs-3 ms-3">Tinggalkan Pesan</h3>
               </div>
               <div class="contact-form ms-3 mt-3 pb-4 px-2">
                 <div class="mb-3">
@@ -862,7 +862,7 @@
       </div>
       <hr class="text-muted my-4" />
 
-      <p>Copyright 2022 Portfolio | All Rights Reserved.</p>
+      <p>Copyright 2025 FauzanDev | All Rights Reserved.</p>
     </footer>
     <!-- footer section ends here -->
 
