--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               Saya memiliki skill dalam bidang pembuatan website serta aplikasi, walau saya masih tahap belajar.
             </p>
             <p class="text-muted">
-              Untuk selengkapnya tentang saya dan untuk menghubungi saya, silahkan klik tombol download PDF dibawah.
+              Untuk selengkapnya tentang saya dan untuk menghubungi saya, silahkan klik tombol Download PDF dibawah.
             </p>
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
@@ -386,7 +386,7 @@
                         consecteaur aeci velit, sed quia non numquam eius modi
                         tempora incidunt ut lao magnam aliquam quaerat ...
                       </p>
-                      <h4>Kevin Andrew</h4>
+                      <h4>Fauzan Fuadi</h4>
                       <small class="fs-6 text-muted">CEO of Company</small>
                     </div>
                   </div>
@@ -402,7 +402,7 @@
                         consecteaur aeci velit, sed quia non numquam eius modi
                         tempora incidunt ut lao magnam aliquam quaerat ...
                       </p>
-                      <h4>Kevin Andrew</h4>
+                      <h4>Fauzan Fuadi</h4>
                       <small class="fs-6 text-muted">CEO of Company</small>
                     </div>
                   </div>
@@ -418,7 +418,7 @@
                         consecteaur aeci velit, sed quia non numquam eius modi
                         tempora incidunt ut lao magnam aliquam quaerat ...
                       </p>
-                      <h4>Kevin Andrew</h4>
+                      <h4>Fauzan Fuadi</h4>
                       <small class="fs-6 text-muted">CEO of Company</small>
                     </div>
                   </div>
@@ -431,7 +431,7 @@
                 data-bs-slide="prev"
               >
                 <i class="bi bi-arrow-left-circle-fill prev"></i>
-                <span class="visually-hidden">Previous</span>
+                <span class="visually-hidden">Kembali</span>
               </button>
               <button
                 class="nextprev-btn rounded-pill next-btn"
@@ -440,7 +440,7 @@
                 data-bs-slide="next"
               >
                 <i class="bi bi-arrow-right-circle-fill next"></i>
-                <span class="visually-hidden">Next</span>
+                <span class="visually-hidden">Selanjutnya</span>
               </button>
             </div>
           </div>
@@ -538,7 +538,7 @@
                       <button href="" class="rounded-pill dribble">
                         <i class="bi bi-dribbble"></i>
                       </button>
-                      <button href="" class="rounded-pill whatsapp">
+                      <button href="https://wa.me/6285640429082" class="rounded-pill whatsapp">
                         <i class="bi bi-whatsapp"></i>
                       </button>
                       <button href="" class="rounded-pill behance">
@@ -610,7 +610,7 @@
                       <button href="" class="rounded-pill dribble">
                         <i class="bi bi-dribbble"></i>
                       </button>
-                      <button href="" class="rounded-pill whatsapp">
+                      <button href="https://wa.me/6285640429082" class="rounded-pill whatsapp">
                         <i class="bi bi-whatsapp"></i>
                       </button>
                       <button href="" class="rounded-pill behance">
@@ -682,7 +682,7 @@
                       <button href="" class="rounded-pill dribble">
                         <i class="bi bi-dribbble"></i>
                       </button>
-                      <button href="" class="rounded-pill whatsapp">
+                      <button href="https://wa.me/6285640429082" class="rounded-pill whatsapp">
                         <i class="bi bi-whatsapp"></i>
                       </button>
                       <button href="" class="rounded-pill behance">
@@ -853,7 +853,7 @@
         <button href="" class="rounded-pill dribble">
           <i class="bi bi-dribbble"></i>
         </button>
-        <button href="" class="rounded-pill whatsapp">
+        <button href="https://wa.me/6285640429082" class="rounded-pill whatsapp">
           <i class="bi bi-whatsapp"></i>
         </button>
         <button href="" class="rounded-pill behance">
