--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <!-- here data-aos is used for adding aos animation  -->
         <div class="col-10 col-md-6 text-center text-md-start" data-aos="slide-right">
           <h2 style="color: #3f396d">
-            Halo Semuanya! Perkenalkan nama aku <br /><span class="c-orange">Fauzan Fuadi</span>
+            Halo Semuanya! Nama saya <br /><span class="c-orange">Fauzan Fuadi</span>
           </h2>
           <p class="text-muted">
-            Saya adalah seorang anak berusia 14 tahun yang bercita cita menjadi pengembang yang profesional, dengan pengalaman saya yang sudah 6 tahun dalam keahlian membuat aplikasi proyek dan situs web yang sepenuhnya responsif dan buatan saya sendiri.
+            Saya bercita cita menjadi programmer yang profesional, dengan pengalaman saya yang sudah 6 tahun dalam keahlian membuat aplikasi proyek dan situs web yang sepenuhnya responsif dan buatan saya sendiri.
           </p>
           <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
             tentang saya
